-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.10.0 Alpha, 5.12.0 RC
-
None
-
-
ba304af284f4cbb579d35046c0cf4c1537af0fec
QGuiApplication::devicePixelRatio() caches its value to improve performance. However, its cache is not refreshed when the system's displays change (if a HiDPI/Retina display is added or removed, or if a display's devicePixelRatio changes), so it can provide an out-of-date value.
For Gerrit Dashboard: QTBUG-63548 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
207453,8 | Refresh QGuiApplication's devicePixelRatio cache when screens change | dev | qt/qtbase | Status: MERGED | +2 | 0 |