src/gui/kernel/qplatformintegration.cpp
@@ -482,6 +482,9 @@ void QPlatformIntegration::screenAdded(QPlatformScreen *ps, bool isPrimary)
     } else {
         QGuiApplicationPrivate::screen_list.append(screen);
     }
+
+    QGuiApplicationPrivate::resetCachedDevicePixelRatio();
+
     emit qGuiApp->screenAdded(screen);
 
     if (isPrimary)
@@ -498,6 +501,8 @@ void QPlatformIntegration::removeScreen(QScreen *screen)
 {
     const bool wasPrimary = (!QGuiApplicationPrivate::screen_list.isEmpty() && QGuiApplicationPrivate::screen_list.at(0) == screen);
     QGuiApplicationPrivate::screen_list.removeOne(screen);
+
+    QGuiApplicationPrivate::resetCachedDevicePixelRatio();
 
     if (wasPrimary && qGuiApp && !QGuiApplicationPrivate::screen_list.isEmpty())
         emit qGuiApp->primaryScreenChanged(QGuiApplicationPrivate::screen_list.at(0));
